Fix content/card spacing

--- a/assets/_src/sass/components/_pager.scss
+++ b/assets/_src/sass/components/_pager.scss
@@ -76,13 +76,13 @@
 
 @media screen and (max-width: 1024px) {
 	.pager {
-		margin: 0.5rem auto 2rem;
+		margin: 2.8rem auto 3rem;
 	}
 }
 
 @media screen and (max-width: 769px) {
 	.pager {
-		margin: 2rem auto 2.5rem;
+		margin: 2.7rem auto 3rem;
 
 		&-previous {
 			flex-basis: 48%;
