--- a/assets/_src/sass/main.scss
+++ b/assets/_src/sass/main.scss
@@ -140,7 +140,7 @@ a {
 
 	.content {
 		margin-bottom: 0;
-		padding: 2.5rem;
+		padding: 2rem 2.5rem 3.7rem;
 	}
 
 	.nav-brand-link,
@@ -151,7 +151,7 @@ a {
 
 @media screen and (max-width: 769px) {
 	.content {
-		padding: 1.5rem;
+		padding: 1.9rem 1.5rem 3.3rem;
 	}
 
 	.nav-brand-link,
